--- a/SiteWeb/tuto/templates/baseBS.html
+++ b/SiteWeb/tuto/templates/baseBS.html
@@ -19,17 +19,17 @@
             <!-- Fixed navbar -->
             <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
               <div class="container-fluid">
-                <a class="navbar-brand" href="#">My Books</a>
+                <a class="navbar-brand" href="/#">Mes Livres</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                   <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#">Home</a>
+                      <a class="nav-link active" aria-current="page" href="/#">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Link</a>
+                      <a class="nav-link" href="#">Ajouter un livre</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link disabled">Disabled</a>
@@ -54,7 +54,7 @@
         </main>
         <footer class="footer mt-auto py-3 bg-light">
             <div class="container">
-              <span class="text-muted">Place sticky footer content here.</span>
+              <span class="text-muted">(FOURNIER Cyprien / FERDOEL Tituan)</span>
             </div>
           </footer>
         {% block scripts %}
