--- a/SiteWeb/tuto/templates/detail.html
+++ b/SiteWeb/tuto/templates/detail.html
@@ -12,7 +12,7 @@
     </a>
     <div class="card-body">
             <h5 class="card-text card-footer">
-                    Auteur : {{ book.author }}
+                    Auteur : {{ book.author.name }}
             </h5>
             <h6 class="card-text card-footer">
                 Prix : {{ book.price }} €
