--- a/SiteWeb/tuto/templates/baseBS.html
+++ b/SiteWeb/tuto/templates/baseBS.html
@@ -54,7 +54,7 @@
         </main>
         <footer class="footer mt-auto py-3 bg-light">
             <div class="container">
-              <span class="text-muted">(FOURNIER Cyprien / FERDOEL Tituan)</span>
+              <span class="text-muted">(FOURNIER Cyprien / FERDOEL Titouan)</span>
             </div>
           </footer>
         {% block scripts %}
