--- a/SiteWeb/tuto/templates/detail.html
+++ b/SiteWeb/tuto/templates/detail.html
@@ -13,10 +13,12 @@
     <div class="card-body">
             <h5 class="card-text card-footer">
                     Auteur : {{ book.author.name }}
+                    <a class="btn btn-outline-success" type="button" href="/edit/author/{{book.author.id}}">EDIT</a>
             </h5>
             <h6 class="card-text card-footer">
                 Prix : {{ book.price }} €
         </h6>
+        
     </div>
 </div>
 {% endblock %}
