--- a/SiteWeb/tuto/templates/edit-author.html
+++ b/SiteWeb/tuto/templates/edit-author.html
@@ -20,6 +20,6 @@
     {% endfor %}
   </ul >
   {% endif %}
-  <input class="btn btn-default" type="submit" value="Enregistrer">
+  <input class="btn btn-outline-success" type="submit" value="Enregistrer">
 </form >
 {% endblock %}
