--- a/SiteWeb/tuto/templates/edit-author.html
+++ b/SiteWeb/tuto/templates/edit-author.html
@@ -1,6 +1,7 @@
 {% extends "baseBS.html" %}
 {% block content %}
 <h1 >Edit author : {{ author.name }}</h1 >
+<h1 >Changer le nom de cet auteur : {{ author.name }}</h1 >
 <form role="form" method="POST" action ="{{ url_for ('save_author') }}">
   {{ form.hidden_tag() }}
 
