--- a/SiteWeb/tuto/templates/detail.html
+++ b/SiteWeb/tuto/templates/detail.html
@@ -12,7 +12,10 @@
     />
   </a>
   <div class="card-body">
-    <h5 class="card-text card-footer">Auteur : {{ book.author.name }}</h5>
+    <a href="{{ url_for('one_author', id=book.author.id) }}">
+      <h5 class="card-text card-footer">Auteur : {{ book.author.name }}</h5>
+    </a>
+
     <h6 class="card-text card-footer">Prix : {{ book.price }} €</h6>
   </div>
 </div>
