--- a/SiteWeb/tuto/templates/baseBS.html
+++ b/SiteWeb/tuto/templates/baseBS.html
@@ -36,17 +36,17 @@
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+                <a class="nav-link" href="{{ url_for('login') }}">Login </a>
               </li>
               {% if current_user.is_authenticated %}
               <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('ajoute_author')}}"
-                  >Ajouter un auteur</a
-                >
+                  >| Ajouter un auteur |
+                </a>
               </li>
               <span class="navbar-text"> {{ current_user.username }} </span>
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+                <a class="nav-link" href="{{ url_for('logout') }}"> | Logout</a>
               </li>
               {% endif %}
             </ul>
