--- a/SiteWeb/tuto/templates/ajout_livre.html
+++ b/SiteWeb/tuto/templates/ajout_livre.html
@@ -23,4 +23,40 @@
 <input class="btn btn-outline-success" type="submit" value="Ajouter">
 
 
+<form
+  class="form-horizontal"
+  role="form"
+  method="POST"
+  action="{{ url_for('add_livre') }}"
+>
+  {{ form.hidden_tag() }}
+  <div class="form-group">
+    <label for="username" class="col-sm-2 control-label"
+      >{{ form.username.label }}</label
+    >
+    <div class="col-sm-10">
+      {{ form.username(size =50, class_="form-control", placeholder ="Username")
+      }}
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="password" class="col-sm-2 control-label"
+      >{{ form.password.label }}</label
+    >
+    <div class="col-sm-10">
+      {{ form.password (size =50, class_="form-control", placeholder
+      ="Password") }}
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button type="submit" class="btn btn-default">Se connecter</button>
+    </div>
+  </div>
+</form>
+
+
 {% endblock %}
+
+
+
